email sms template updates

--- a/docs/authentication/configuration/email-sms-templates.mdx
+++ b/docs/authentication/configuration/email-sms-templates.mdx
@@ -28,14 +28,10 @@ Clerk allows you to modify the templates listed below.
 
 ### Email
 
-To access the email templates, in the Clerk Dashboard, go to **Customization > [Emails](https://dashboard.clerk.com/last-active?path=customization/email)**.
+To access the email templates:
 
-<Images 
-width={3024}
-height={1652}
-src="/docs/images/authentication/email-sms-options/email-templates.jpg"
-alt="The 'Emails' tab under the 'Customization' section of the Clerk Dashboard."
-/>
+1. Navigate to the [Clerk Dashboard](https://dashboard.clerk.com/last-active?path=customization/email).
+2. In the navigation sidebar, select **Customization > Emails**.
 
 The following templates are available for customization:
 
@@ -53,14 +49,10 @@ The following templates are available for customization:
 
 ### SMS
 
-To access the SMS templates, in the Clerk Dashboard, go to **Customization > [SMS](https://dashboard.clerk.com/last-active?path=customization/sms)**.
+To access the SMS templates:
 
-<Images 
-width={3024}
-height={1652}
-src="/docs/images/authentication/email-sms-options/sms-templates.jpg"
-alt="The 'SMS' tab under the 'Customization' section of the Clerk Dashboard."
-/>
+1. Navigate to the [Clerk Dashboard](https://dashboard.clerk.com/last-active?path=customization/sms).
+2. In the navigation sidebar, select **Customization > SMS**.
 
 The following templates are available for customization:
 
@@ -72,7 +64,7 @@ The following templates are available for customization:
 | [Reset password](https://dashboard.clerk.com/last-active?path=customization/sms/reset_password_code/edit) | SMS containing an OTP (One Time Password) code that allows the user to reset their password |
 | [Verification code](https://dashboard.clerk.com/last-active?path=customization/sms/verification_code/edit) | SMS containing an OTP (One Time Password) code for verifying account access |
 
-## Before you start 
+## Before you start
 
 ### Revolvapp WYSIWYG email editor plugin
 
@@ -106,11 +98,17 @@ Please consult the following sub-sections to see which operations are available 
   Depending on the state of the template and the current application subscription plan, one or more operations may not not available.
 </Callout>
 
-### Edit 
+### Edit
 
-Editing templates allows you to customize existing Clerk-sent emails and SMS messages to make them more inline with your own branding. To edit a template, click on the desired template card from the **[Email](https://dashboard.clerk.com/last-active?path=customization/email)** or **[SMS](https://dashboard.clerk.com/last-active?path=customization/sms)** template listing page. These pages can be found under the **Customization** drop down in the side nav of the [Clerk Dashboard](https://dashboard.clerk.com).
+Editing templates allows you to customize existing Clerk-sent emails and SMS messages to make them more inline with your own branding.
 
-To persist your changes, click on the **Apply Changes** button at the bottom right. Your changes will then take immediate effect for the corresponding application instance. 
+To edit a template,
+1. Navigate to the Clerk Dashboard.
+2. In the navigation sidebar, select **Customization**.
+3. In the dropdown, select the **[Email](https://dashboard.clerk.com/last-active?path=customization/email)** or **[SMS](https://dashboard.clerk.com/last-active?path=customization/sms)** template listing page.
+4. Select the desired template card.
+
+Once changes are made, select the **Apply Changes** button at the bottom right. Your changes will then take immediate effect for the corresponding application instance.
 
 Templates are editable:
 
@@ -119,100 +117,65 @@ Templates are editable:
 
 This allows you freely test the templating feature on your development environment to see if it fits your individual use case before deciding on a plan upgrade.
 
-### Preview 
+### Preview
 
-The Preview operation enables you to get an idea of how the template will render when sent to the recipient. This is useful for sampling your changes without actually having to commit them first.
+The **Preview** operation enables you to get an idea of how the template will render when sent to the recipient. This is useful for sampling your changes without actually having to commit them first.
 
-To trigger a preview, you can click on the **Preview** button at the bottom left of the screen. The example below shows a preview of the default **Invitation** email template.
-
-<Images 
-width={3024}
-height={1652}
-src="/docs/images/authentication/email-sms-options/template-preview.jpg"
-alt="A preview of the default 'Invitation' email template. A red arrow points to the 'Preview' button."
-/>
+To trigger a preview of a template, select the **Preview** button at the bottom left of the dashboard.
 
 In email templates, the `app_logo` and `copyright` sections (if present) will be replaced with their actual markup in this view. For both emails & SMS, the template variables will be replaced with sample values.
 
 Previewing is available for all templates.
 
-### Reset 
+### Reset
 
-While editing a template, you can undo all changes since the last save by clicking on the **Reset** button at the bottom right of the edit page.
+While editing a template, you can undo all changes since the last save by selecting the **Reset** button at the bottom right of the dashboard.
 
 Template reset is applicable to editable templates.
 
-<Images 
-width={3024}
-height={1652}
-src="/docs/images/authentication/email-sms-options/reset-template.jpg"
-alt="The 'Invitation' email template customization page. A red arrow points to the 'Reset' button."
-/>
-
 ### Revert
 
-Even if you override a Clerk-provided template with your own customizations, you can always roll back to the system default template version by clicking on the **Revert** button.
-
-<Images 
-width={3024}
-height={1652}
-src="/docs/images/authentication/email-sms-options/revert-template.jpg"
-alt="The 'Invitation' email template customization page. A red arrow points to the 'Revert' button."
-/>
+If you override a Clerk-provided template with your own customizations, you can always roll back to the system default template version by selecting the **Revert** button at the bottom left of the dashboard.
 
 This can be useful if you want to start over from scratch.
 
 <Callout type="info">
-  Your current changes will be lost, so please make sure you indeed wish to discard them prior to reverting. You will be asked to confirm your choice to prevent an unintentional action.
+  Your current changes will be lost, so make sure you mean to discard them prior to reverting. You will be asked to confirm your choice to prevent an unintentional action.
 </Callout>
 
 ### Copy to another instance of the same application
 
-If your application has more than one instance, then you will also have the option of copying the current state of the editor to another instance.
+If your application has more than one instance, you can copy the current state of the editor to another instance.
 
-This is especially useful for promoting changes from your development or staging environment to production, after you have tested them.
+This is especially useful for promoting changes from your development or staging environment to production after you have tested them.
 
-To copy to another instance, you will need to first click on the **Copy to** button and then from the sub-menu, select the target instance.
+To copy to another instance, you will need to first select the **Copy** button in the bottom left of the dashboard. Then, from the sub-menu, select the target instance.
 
 <Callout type="warning">
   The copy icon will not appear if there are no other instances available on your application.
 </Callout>
 
-<Images 
-width={3024}
-height={1652}
-src="/docs/images/authentication/email-sms-options/copy-button.jpg"
-alt="The 'Invitation' email template customization page. A red arrow points to the 'Copy' button."
-/>
-
 Since this change will override the current state of the template on the target instance, you will be asked to confirm your choice.
 
-<Images 
-width={3024}
-height={1652}
-src="/docs/images/authentication/email-sms-options/copy-prompt.jpg"
-alt="The 'Invitation' email template customization page. A popup window titled 'Copy template' asks the user to confirm their decision in copying the 'invitation' template to the 'Production' instance."
-/>
+## Email template editor
 
-## Email template editor 
-
-The email template editor comprises of template settings & the WYSIWYG editor.
+The email template editor is comprised of [template settings](#template-settings) & the WYSIWYG editor.
 
 The WYSIWYG editor is split into two parts:
 
-- The toolbar
-- The text area
+- [The toolbar](#toolbar-controls)
+- [The text area](#text-area-controls)
 
 Since the toolbar exposes quite a few tools, we will examine them in more detail in the following sub-sections.
 
-<Images 
+<Images
 width={3024}
 height={1652}
 src="/docs/images/authentication/email-sms-options/WYSIWYG-editor.jpg"
 alt="The 'WYSIWG' editor with a red box around the toolbar and a red box around the text area. Both sections are labeled accordingly."
 />
 
-### Template settings
+### Email template settings
 
 The following settings can be changed for an email template:
 
@@ -226,18 +189,18 @@ This means that Clerk will no longer be sending this particular email and in ord
   This is a per-template setting.
 </Callout>
 
-<Images 
+<Images
 width={3024}
 height={1652}
 src="/docs/images/authentication/email-sms-options/delivered-by-clerk.jpg"
 alt="The 'Invitation' email template customization page. There is a red box around the 'Delivered by Clerk' section."
 />
 
-#### Template name
+#### Name
 
-The template name is a human-friendly name for identifying the template on the template listing page. It does not affect the outgoing email in any way.
+**Name** is the template name and represents a human-friendly name for identifying the template on the template listing page. It does not affect the outgoing email in any way.
 
-<Images 
+<Images
 width={3024}
 height={1652}
 src="/docs/images/authentication/email-sms-options/template-name.jpg"
@@ -246,7 +209,7 @@ alt="The 'Invitation' email template customization page. There is a red box arou
 
 #### Send from
 
-Clerk will populate the 'from' email address with:
+Clerk will populate the **From** email address with:
 
 `<local part>@<your-domain>`
 
@@ -254,7 +217,7 @@ The local part depends on the type of email sent ('verification code', 'invitati
 
 If you wish to override the local part with your own value, e.g. 'accounting', 'sales', etc, then set that value in the provided input.
 
-<Images 
+<Images
 width={3024}
 height={1652}
 src="/docs/images/authentication/email-sms-options/template-from.jpg"
@@ -263,16 +226,16 @@ alt="The 'Invitation' email template customization page. There is a red box arou
 
 ### Toolbar controls
 
-Note that the toolbar contains two types of controls:
+The toolbar contains two types of controls:
 
-1. Buttons - expose a sub-menu with more settings you can apply to the currently selected block or text; you can switch from one button to another with a single click.
+1. Buttons - expose a sub-menu with more settings you can apply to the currently selected block or text.
 2. Toggles - switch the editor to another view mode, in which all other tools become disabled. To exit the current mode, you will need to toggle back.
 
 #### Shortcuts button
 
 Opens a popup with the keyboard shortcuts that the editor supports.
 
-<Images 
+<Images
 width={3024}
 height={1652}
 src="/docs/images/authentication/email-sms-options/editor-shortcuts.jpg"
@@ -283,9 +246,9 @@ alt="The 'Invitation' email template customization page. There is a red box arou
 
 Shows how the email will render on a mobile device with a portrait aspect ratio.
 
-Click on the mobile view toggle again to return to desktop view.
+Select the mobile view toggle again to return to desktop view.
 
-<Images 
+<Images
 width={3024}
 height={1652}
 src="/docs/images/authentication/email-sms-options/editor-mobile-view.jpg"
@@ -298,9 +261,9 @@ Switches the editor to source mode. The source format is Revolvapp's own templat
 
 For this tool to appear, you will need to unselect any currently selected block.
 
-To exit HTML/source mode, click on the toggle again.
+To exit HTML/source mode, select the toggle again.
 
-<Images 
+<Images
 width={3024}
 height={1652}
 src="/docs/images/authentication/email-sms-options/editor-code.jpg"
@@ -311,7 +274,7 @@ alt="The 'Invitation' email template customization page. There is a red box arou
 
 Allows selecting a color or image as a background for the currently selected block.
 
-<Images 
+<Images
 width={3024}
 height={1652}
 src="/docs/images/authentication/email-sms-options/editor-background.jpg"
@@ -322,7 +285,7 @@ alt="The 'Invitation' email template customization page. There is a red box arou
 
 Opens a popup with settings contextually based on the selected block or text.
 
-<Images 
+<Images
 width={3024}
 height={1652}
 src="/docs/images/authentication/email-sms-options/editor-settings.jpg"
@@ -335,7 +298,7 @@ Allows you to insert a new block of content. For the button to appear, you will 
 
 The editor comes with a number of predefined blocks such as blocks with a header, image, button, multiple columns, etc.
 
-<Images 
+<Images
 width={3024}
 height={1652}
 src="/docs/images/authentication/email-sms-options/editor-add-block.jpg"
@@ -346,7 +309,7 @@ alt="The 'Invitation' email template customization page. There is a red box arou
 
 Enables horizontal alignment (left, right or center). For the button to appear, you will need to select an element that can be aligned, such as a text node.
 
-<Images 
+<Images
 width={3024}
 height={1652}
 src="/docs/images/authentication/email-sms-options/editor-alignment.jpg"
@@ -357,7 +320,7 @@ alt="The 'Invitation' email template customization page. There is a red box arou
 
 Converts a selected text fragment into a link. Users can configure the link text and the URL that the link should point to. For the button to appear, you will need to select an element that can be turned into a link, such as a text node.
 
-<Images 
+<Images
 width={3024}
 height={1652}
 src="/docs/images/authentication/email-sms-options/editor-link.jpg"
@@ -366,9 +329,9 @@ alt="The 'Invitation' email template customization page. There is a red box arou
 
 #### Text color button
 
-Exposes a color picker so that you can select the color of the fonts in the affected block or text fragment. For the button to appear, you will need to click inside a text node.
+Exposes a color picker so that you can select the color of the fonts in the affected block or text fragment. For the button to appear, you will need to select inside a text node.
 
-<Images 
+<Images
 width={3024}
 height={1652}
 src="/docs/images/authentication/email-sms-options/editor-text-color.jpg"
@@ -377,9 +340,9 @@ alt="The 'Invitation' email template customization page. There is a red box arou
 
 #### Variable button
 
-Shows a dropdown with the available variables for the current template. For the button to appear, you will need to click inside a text node. Upon insertion, the variable will be automatically wrapped in curly braces; there is no need to add them yourself.
+Shows a dropdown with the available variables for the current template. For the button to appear, you will need to select inside a text node. Upon insertion, the variable will be automatically wrapped in curly braces; there is no need to add them yourself.
 
-<Images 
+<Images
 width={3024}
 height={1652}
 src="/docs/images/authentication/email-sms-options/editor-variables.jpg"
@@ -388,9 +351,9 @@ alt="The 'Invitation' email template customization page. There is a red box arou
 
 #### Border button
 
-Permits setting a border width, color and radius on a given block. Using the radius you can give a block rounded corners. For the button to appear, you will need to click on an element that allows borders, such as a button.
+Permits setting a border width, color and radius on a given block. Using the radius you can give a block rounded corners. For the button to appear, you will need to select an element that allows borders, such as a button.
 
-<Images 
+<Images
 width={3024}
 height={1652}
 src="/docs/images/authentication/email-sms-options/editor-border.jpg"
@@ -410,7 +373,7 @@ Since you may not want all buttons or links to have this behavior, you will need
 
 These classes can be added as attributes to the Revolvapp template markup after toggling the editor to HTML (i.e. source) mode.
 
-<Images 
+<Images
 width={3024}
 height={1652}
 src="/docs/images/authentication/email-sms-options/cl-branded-button-class.jpg"
@@ -419,13 +382,13 @@ alt="The 'Invitation' email template customization page. The 'email body' WSYIWG
 
 ### Text area controls
 
-The email editor text area is intended mainly for authoring content. Though, if you click on a block, a set of tools will also appear:
+The email editor text area is intended mainly for authoring content. Though, if you select a block, a set of tools will also appear:
 
-- Move handle - Allows the selected block to be moved up or down with regard to its sibling blocks
-- Delete - Removes the block from the template
-- Clone - Clones the block using the exact same settings
+- **Move handle** - Allows the selected block to be moved up or down with regard to its sibling blocks
+- **Delete** - Removes the block from the template
+- **Clone** - Clones the block using the exact same settings
 
-<Images 
+<Images
 width={3024}
 height={1652}
 src="/docs/images/authentication/email-sms-options/editor-text-area-controls.jpg"
@@ -436,43 +399,27 @@ alt="The 'Invitation' email template customization page. The 'Accept invitation'
 
 The SMS editor is much simpler to use since SMS supports plain text only. You can edit the message contents to your liking via the provided text area. You can also set up template settings according to your needs.
 
-When you are satisfied with your edits you can persist them by clicking on the **Apply Changes** button.
-
-### Template settings
+### SMS template settings
 
 The following settings can be changed for an SMS template:
 
 #### Delivered by Clerk
 
-Out of the box, Clerk will deliver your SMS messagess using its own SMS Gateway. However, if you wish to handle SMS delivery on your own, then you can toggle delivery by Clerk off.
+Out of the box, Clerk will deliver your SMS messagess using its own SMS Gateway. However, if you wish to handle SMS delivery on your own, then you can toggle **Delivery by Clerk** off.
 
-This means that Clerk will no longer be sending this particular SMS and in order to deliver it yourself you will need to listen to the `sms.created` webhook and extract the necessary info from the event payload.
+This means that Clerk will no longer be sending this particular SMS and in order to deliver it yourself, you will need to listen to the `sms.created` webhook and extract the necessary info from the event payload.
 
 <Callout type="info">
   This is a per-template setting.
 </Callout>
 
-<Images 
-width={3024}
-height={1652}
-src="/docs/images/authentication/email-sms-options/sms-delivered-by-clerk.jpg"
-alt="The 'Invitation' SMS template customization page. There is a red box around the 'Delivered by Clerk' section."
-/>
+#### Name
 
-#### Template name
-
-The template name is a human-friendly name for identifying the template on the template listing page. It does not affect the outgoing SMS message in any way.
-
-<Images 
-width={3024}
-height={1652}
-src="/docs/images/authentication/email-sms-options/sms-template-name.jpg"
-alt="The 'Invitation' SMS template customization page. There is a red box around the 'Name' section."
-/>
+**Name** is the template name and represents a human-friendly name for identifying the template on the template listing page. It does not affect the outgoing SMS message in any way.
 
 #### Variable widget
 
-To insert a variable at the current cursor position, you can click on the corresponding variable badge in the variable widget that is located adjacent to the text area.
+To insert a variable at the current cursor position, select the corresponding variable badge in the variable widget that is located adjacent to the text area.
 
 Note that the invitation template supports public invitation metadata, whereas the verification code template supports public user metadata (in the case that a user already exists).
 
@@ -480,7 +427,7 @@ You can interpolate a particular metadata key as follows:
 
 `{{invitation.public_metadata.foo.bar}}`
 
-<Images 
+<Images
 width={3024}
 height={1652}
 src="/docs/images/authentication/email-sms-options/sms-variables.jpg"
