--- a/docs/organizations/verified-domains.mdx
+++ b/docs/organizations/verified-domains.mdx
@@ -1,11 +1,47 @@
 ---
-title: Verified Domains
+title: Verified domains
 description: Learn about how to use verified domains for organizations.
 ---
 
-# Creating and verifying a domain
+# Verified domains
 
-Domains can be added and verified under an organization by an administrator. In order to enable this feature, go to the Clerk Dashboard and navigate to the **[Organizations Settings](https://dashboard.clerk.com/last-active?path=organizations-settings)** page. Toggle on **Verified domains**. The only parameter needed to create an organization domain is the `name`.
+Verified domains can be used to streamline enrollment into an organization. For example, if the domain `@clerk.com` is verified, any user with an email address ending in `@clerk.com` can be automatically invited or be suggested to join an organization with that domain. This feature is useful for organizations that want to restrict membership to users with specific email domains.
+
+## Enable verified domains
+
+Enabling verified domains applies to all organizations and cannot currently be managed on a per-organization basis.
+
+In order to enable this feature:
+
+1. Navigate to the [Clerk Dashboard](https://dashboard.clerk.com/last-active?path=organizations-settings)
+2. In the navigation sidebar, select **Organizations Settings**.
+3. In the **Verified domains** section, check the **Enable verified domains** checkbox.
+4. The following settings will appear:
+  - [**Enrollment mode**](#enrollment-mode) - Choose between `automatic_invitation` and `automatic_suggestion`.
+  - [**Default role**](#default-role) - Choose the default role for users who join the organization through a verified domain.
+
+### Enrollment mode
+
+You can enable the following enrollment modes to be available for your application:
+
+- `automatic_invitation` - During sign-up, a user will receive an invitation for the organization if their email's domain matches the verified domain. The user will join the organization if they accept the automatic invitation.
+- `automatic_suggestion` - During sign-up, a user will receive a suggestion for the organization if their email's domain matches the verified domain. The user can request to join, and an administrator must accept this request before the user can join the organization.
+
+Once a domain is created and verified in your application, an administrator will have the option to enable whichever enrollment modes you made available.
+
+### Default role
+
+Once verified domains are enabled, you are required to define which role will be assigned to the user that will receive the organization invitation or organization suggestions in order to join your organization.
+
+By default, the options are "Member" and "Admin". However, you can also [create custom roles for your organization](/docs/organizations/create-roles-permissions).
+
+<Callout type="warning">
+  You can't delete an organization role if it's used as the verified domain's default role.
+</Callout>
+
+## Adding and verifying domains
+
+Domains can be added and verified under an organization by an organization administrator. The easiest way to do so is by using Clerk's [`<OrganizationSwitcher />`] component. In the **General** tab, there will be a **Verified domains** section where you can add and verify domains.
 
 Domains can be verified through an email verification code sent to an email that matches the domain. If the administrator adding the domain already has a verified email using that domain in their account, the domain will be automatically verified.
 
@@ -13,26 +49,9 @@ An application instance may only have one verified domain of the same name, and 
 
 You can create up to 10 domains per organization to meet your needs. If you need more than 10 domains, reach out to support@clerk.dev.
 
-## Default role
+### Custom flow
 
-When enabling the verified domains feature, you are also required to define which role will be assigned to the user that will receive the organization invitation or organization suggestions in order to join your organization.
-
-You can choose any of the available organization roles of your instance.
-
-<Callout type="warning">
-  You can't delete an organization role if it's used as the verified domain's default role.
-</Callout>
-
-To specify the verified domain's default role, in the Clerk Dashboard, go to the **[Organizations Settings](https://dashboard.clerk.com/last-active?path=organizations-settings)** page.
-
-## Enrollment modes
-
-Once a domain is created and verified, an administrator can choose between two enrollment modes to enable new ways for users to join organizations.
-
-- `automatic_invitation` - During sign-up, a user will receive an invitation for the organization if their email's domain matches the verified domain. The user will join the organization if they accept the automatic invitation.
-- `automatic_suggestion` - During sign-up, a user will receive a suggestion for the organization if their email's domain matches the verified domain. The user can request to join, and an administrator must accept this request before the user can join the organization.
-
-### Usage
+If Clerk's [`<OrganizationSwitcher />`] does not meet your specific needs or if you require more control over the logic, you can use the Clerk API to add and verify a domain and update the domain's enrollment mode. Here's an example of how you can do this:
 
 ```tsx copy
 const { organization, domains } = useOrganization();
