remove section about implementing features

--- a/docs/organizations/overview.mdx
+++ b/docs/organizations/overview.mdx
@@ -9,6 +9,11 @@ Organizations play a crucial role in structuring user management within your app
 
 By utilizing organizations, you can assign specific roles and permissions to users, allowing you to finely control access to different parts of your application. Whether you're managing projects, coordinating teams, or facilitating partnerships, organizations offer a flexible and scalable way to structure user access and permissions.
 
+<Callout type="info">
+  To explore organizations in Clerk, check out this demo repo:
+  https://github.com/clerk/organizations-demo
+</Callout>
+
 ## Enable organizations in your application
 
 Organizations are disabled by default.
@@ -77,22 +82,13 @@ Clerk provides a set of prebuilt components to help your users manage their orga
 
 ### Admin membership management
 
-As an admin, you can manage organization memberships through the Clerk Dashboard. You can view and manage:
+As an admin, you can manage organization memberships
 
 - Membership list
 - Domains
 - Invitations (invite form, invitations list)
 - Membership suggestions
 - Membership requests
-
-## Implement organization features in your application
-
-Clerk provides [prebuilt components](/docs/components/overview), [React hooks](/docs/references/react/use-organization), and [APIs](/docs/references/javascript/organization/organization) to help you integrate organizations into your application. Using the [Organizations Backend API](https://clerk.com/docs/reference/backend-api/tag/Organizations), you can provide additional [private and public metadata for the organization](/docs/organizations/metadata) and set custom attributes.
-
-<Callout type="info">
-  To explore organizations in Clerk, check out this demo repo:
-  https://github.com/clerk/organizations-demo
-</Callout>
 
 ## Frequently asked questions (FAQ)
 
