--- a/docs/authentication/saml/authentication-flows.mdx
+++ b/docs/authentication/saml/authentication-flows.mdx
@@ -36,11 +36,11 @@ To allow IdP-initiated flows for your Enterprise Connection:
 
 While IdP-initiated flows may offer a layer of convenience for your users, it is also potentially susceptible to MITM (man-in-the-middle) attacks in which a bad actor may be able to hijack the IdP response and uses it to gain access to a compromised account.
 
-By enabling an IdP-Initiated flow, its possible for Clerk to receive unsolicited authentication requests and neither the Service Provider or the Identity Provider will be able to verify that the flow was initiated by the specified user.
+By enabling an IdP-Initiated flow, it's possible for Clerk to receive unsolicited authentication requests and neither the Service Provider nor the Identity Provider will be able to verify that the flow was initiated by the specified user.
 
 A bad actor could also can intercept the IdP response and replace it with another to make the target user sign in as the attacker, performing a Login CSRF attack.
 
-To this end, Clerk recommends using the [SP-initiated flow](#sp-initiated-flow-recommended)
+To this end, Clerk recommends using the [SP-initiated flow](#sp-initiated-flow-recommended).
 
 That said, in order to protect and offer the best possible security for your application and users, Clerk mitigates these risks by implementing several security measures:
 
