--- a/docs/authentication/saml/overview.mdx
+++ b/docs/authentication/saml/overview.mdx
@@ -51,7 +51,7 @@ This will work: Once the user comes back from the IdP, they will need to go thro
 
 ### What happens if I delete the SAML connection? Will my users be deleted?
 
-The users will not be deleted, so your application will not break. However, they will need to use another strategy (e.g. password, email OTP etc) to authenticate themselves moving forward.
+The users will not be deleted, so your application will not break. However, they will need to use another [strategy](/docs/authentication/configuration/sign-up-sign-in-options#authentication-strategies) such as password, email OTP, etc., to authenticate themselves moving forward.
 
 ### Does Clerk support IdP-initiated SSO?
 
