--- a/docs/integrations/databases/firebase.mdx
+++ b/docs/integrations/databases/firebase.mdx
@@ -3,118 +3,178 @@ title: Integrate Firebase with Clerk
 description: Learn how to integrate Clerk into your Firebase application.
 ---
 
+<TutorialHero
+  beforeYouStart={[
+    {
+      title: "Set up a Clerk application",
+      link: "/docs/quickstarts/setup-clerk",
+    },
+    {
+      title: "Set up a local project",
+      link: "/docs/quickstarts/overview",
+    },
+  ]}
+>
+
+- Use Clerk to authenticate access to your Firebase data.
+- Configure your Firebase Clerk integration.
+
+</TutorialHero>
+
 # Integrate Firebase with Clerk
 
 Integrating Firebase with Clerk gives you the benefits of using Firebase's NoSQL database while leveraging Clerk's authentication, prebuilt components, and webhooks.
 
-To enable Firebase integration with your Clerk application, you must provide Clerk with the required Firebase configuration attributes depending on the Firebase features you would require authenticated user access to.
-
-To get started, go to the Clerk Dashboard and navigate to the **[Integrations](https://dashboard.clerk.com/last-active?path=integrations)** page. Turn on the Firebase integration.
-
-Once enabled, you will be presented with a form to enter the required Firebase configuration attributes.
-
-## Configuration
-
-To fill out the Firebase configuration form, you can either fill the fields manually or provide a JSON file from Firebase. If you choose to upload the JSON file, the fields will automatically get filled for you.
-
-### Upload a JSON Firebase configuration file
-
-Go to the [Firebase console](https://console.firebase.google.com/) and choose your application. On the Firebase console homepage, click on the settings cog icon in the top left, next to **Project Overview**. A menu will open. Choose the **Project settings** option.
-
-Once you are directed to the **Project settings** page, click on the **Service Accounts** tab. 
-
-On the **Service Accounts** page, click on the **Generate new private key** button.
-
-A modal will pop open. Click on the **Generate key** button. The JSON configuration file will be downloaded to your computer.
-
-To upload the file to Clerk, click on the **Upload JSON** button on the Firebase integration screen inside the configuration modal.
-
-### Fill in the required attributes manually
-
-The attributes that you need to fill in to connect Clerk with Firebase, as a custom authentication system, are described below.
-
-- **Service account ID** - The **service account ID** can be found in the [Google Cloud Console](https://console.cloud.google.com/projectselector2/iam-admin/serviceaccounts?consoleUI=FIREBASE&hl=fi&supportedpurview=project) for your Firebase project, or in the `client_email` field of a service account JSON file.
-- **Project ID** - The **Firebase project ID** is the unique identifier of your Firebase project. Can be found under the **Project Settings** in the Firebase platform.
-- **Database URL** *(Optional)* - The **Firebase Realtime Database URL** as retrieved from the Firebase platform under the **Realtime Database** page.
-- **Private Key** - The private key used for signing which belongs to the Google service account ID of your project. Can be found in the Google Cloud Console for your Firebase project, or in the `private_key` field of a service account JSON file.
-
-## Firebase user sign-in with Clerk as an authentication provider
-
-After successfully completing the integration setup on in the Clerk Dashboard, you should set up your frontend to connect Clerk with the Firebase authentication system.
-
 <Steps>
 
-### Retrieve a Firebase user authentication token from Clerk
+### Configure the integration 
 
-The Firebase Web SDK requires an authentication token to sign in your users using Clerk as the custom authentication provider. This token can be retrieved calling the `getToken` method returned from the [`useAuth()`](/docs/references/react/use-auth) hook and calling it with the `integration_firebase` template parameter.
+To get started:
+1. Navigate to the Clerk Dashboard.
+1. In the sidebar, select **[Integrations](https://dashboard.clerk.com/last-active?path=integrations)**, and toggle the Firebase integration on.
 
-```jsx
-await getToken({ template: "integration_firebase" });
+The Firebase integration enables you to use Clerk to generate a valid authentication token to send to Firebase's API. To do so, you can upload your Firebase project's service account key JSON file to configure the integration automatically.
+
+To generate a service account key:
+
+1. Visit [the Service Accounts settings](https://console.firebase.google.com/project/_/settings/serviceaccounts/adminsdk) in your Firebase project.
+1. Near the bottom of the page, select **Generate New Private Key** and save the file.
+
+See [the manual configuration instructions](#configure-firebase-manually) if you don't want to use a service account key.
+
+### Enable authentication in Firebase
+
+To use Firebase auth, ensure authentication is enabled in your Firebase dashboard. To do so:
+
+1. Navigate to your Firebase dashboard.
+1. In the sidebar navigation, expand **Build** and select **Authentication**.
+1. Enable authentication on this page, and enable any sign-in method you want, such as **Email/Password**.
+
+### Add a Security Rule to your Firestore database
+
+To use Firestore with Clerk, ensure that you have defined [Security Rules](https://firebase.google.com/docs/firestore/security/get-started) that allow authenticated requests to access your database. For example:
+
+```bash
+service cloud.firestore {
+  match /databases/{database}/documents {
+    match /{document=**} {
+      allow read, write: if request.auth != null;
+    }
+  }
+}
 ```
 
-The above method will return the token needed for the Firebase Web SDK to sign in your users with Clerk.
+### Get your Firebase config object
 
-### Sign in using the Firebase Web SDK
+To connect to your Firebase app in your code, you need a config object from your Firebase project. To find it:
 
-<Callout type="info">
-  The Firebase Web SDK referenced is the browser installation of the official Firebase JavaScript SDK package on [npm](https://www.npmjs.com/package/firebase).
-</Callout>
+1. Visit [your Firebase project settings](https://console.firebase.google.com/project/_/settings/general/).
+1. Scroll down to the setup code snippet on this page, and copy the config. It should be similar to the following:
+    ```typescript
+    const firebaseConfig = {
+      apiKey: "xxxxxxxxxxxxxxxxxxxxxxxxxxxxxx",
+      authDomain: "clerk-example-xxxxx.firebaseapp.com",
+      databaseURL: "https://clerk-example-xxxxx-default-xxxx.firebaseio.com",
+      projectId: "clerk-test-xxxx",
+      storageBucket: "clerk-test-xxxx.appspot.com",
+      messagingSenderId: "012345678910",
+      appId: "1:012345678:web:abcdef123456hijklm",
+      measurementId: "G-ABC123DEF"
+    };
+    ```
+1. Save this information somewhere secure. You'll need it to connect to your Firebase app.
 
-To authenticate your users on Firebase using Clerk, you would need to call the `signInWithCustomToken` method of the Firebase Auth scope.
+See [Google's Firebase documentation](https://support.google.com/firebase/answer/7015592) for more information on the config object.
 
-<CodeBlockTabs options={["Web SDK v9", "Web SDK v8"]}>
-```jsx
-import { getAuth, signInWithCustomToken } from "firebase/auth";
+### Use Firebase with Clerk in your code
 
-const auth = getAuth();
-await signInWithCustomToken(auth, clerkCustomToken);
-```
+The following example:
+- Uses Clerk to generate an authentication token for Firebase's API.
+- Creates a button for signing into your Firebase app.
+- Creates a button for fetching example data from your Firestore database.
 
-```jsx
-import firebase from "firebase";
-
-await firebase.auth().signInWithCustomToken(clerkCustomToken);
-```
-</CodeBlockTabs>
-
-An example implementation using Next.js:
-
-```jsx
+```tsx filename="app/firebase/page.tsx"
+"use client";
 import { useAuth } from "@clerk/nextjs";
 import { initializeApp } from "firebase/app";
 import { getAuth, signInWithCustomToken } from "firebase/auth";
-import { useEffect } from "react";
-import firebaseConfig from "../lib/firebase.config";
+import { getFirestore } from "firebase/firestore";
+import { doc, getDoc } from "firebase/firestore";
 
-// Initialize Firebase app with config
-initializeApp(firebaseConfig);
+const firebaseConfig = {
+  apiKey: "xxxxxxxxxxxxxxxxxxxxxxxxxxxxxx",
+  authDomain: "clerk-example-xxxxx.firebaseapp.com",
+  databaseURL: "https://clerk-example-xxxxx-default-xxxx.firebaseio.com",
+  projectId: "clerk-test-xxxx",
+  storageBucket: "clerk-test-xxxx.appspot.com",
+  messagingSenderId: "012345678910",
+  appId: "1:012345678:web:abcdef123456hijklm",
+  measurementId: "G-ABC123DEF",
+};
 
-export default function Home() {
+// Connect to your Firebase app
+const app = initializeApp(firebaseConfig);
+// Connect to your Firestore database
+const db = getFirestore(app);
+const auth = getAuth(app);
+
+const getFirestoreData = async () => {
+  const docRef = doc(db, "example", "example-document");
+  const docSnap = await getDoc(docRef);
+  if (docSnap.exists()) {
+    console.log("Document data:", docSnap.data());
+  } else {
+    // docSnap.data() will be undefined in this case
+    console.log("No such document!");
+  }
+};
+
+export default function FirebaseUI() {
   const { getToken } = useAuth();
-
-  useEffect(() => {
-    const signInWithClerk = async () => {
-      const auth = getAuth();
-      const token = await getToken({ template: "integration_firebase" });
-      const userCredentials = await signInWithCustomToken(auth, token);
-
-      /**
-       * The userCredentials.user object will call the methods of
-       * the Firebase platform as an authenticated user.
-       */
-      console.log("user ::", userCredentials.user);
-    };
-
-    signInWithClerk();
-  }, []);
+  const signInWithClerk = async () => {
+    console.log("Sign in with clerk");
+    const token = await getToken({ template: "integration_firebase" });
+    const userCredentials = await signInWithCustomToken(auth, token || "");
+     // The userCredentials.user object can call the methods of
+     // the Firebase platform as an authenticated user.
+    console.log("User:", userCredentials.user);
+  };
 
   return (
-    <main>
-      <h1>Hello Clerk + Firebase!</h1>
+    <main style={{ display: "flex", flexDirection: "column", rowGap: "1rem" }}>
+      <button onClick={signInWithClerk}>Sign in</button>
+      <button onClick={getFirestoreData}>Get document</button>
     </main>
   );
 }
 ```
 </Steps>
 
+## Configure Firebase manually
 
+You should use a service account key to [configure your integration automatically](#configure-your-project).
+
+If you want to manually configure your Firebase integration, you must provide Clerk with the following information about your Firebase project:
+
+- **Service account email** – Find this in your Firebase project's [Google Cloud Console](https://console.cloud.google.com/projectselector2/iam-admin/serviceaccounts?consoleUI=FIREBASE&hl=fi&supportedpurview=project), or in the `client_email` field of your service account key JSON file.
+- **Firestore project ID** – Find this under **Project Settings** in the Firebase dashboard, or in the `project_id` field of your service account key JSON file.
+- **Private Key** – You can [generate this manually](https://firebase.google.com/docs/cloud-messaging/auth-server#:~:text=In%20the%20Firebase%20console%2C%20open,confirm%20by%20clicking%20Generate%20Key.), or find it in the `private_key` field of your service account key JSON file.
+- **Firebase database URL** *(Optional)* – To find this:
+  - In the Firebase dashboard, select **Realtime Database**
+  - Select the **Data** tab, and select the copy button to add the database URL to your clipboard
+
+## Next steps
+
+<div className="container mx-auto my-4">
+  <div className="grid grid-cols-1 gap-6 md:grid-cols-2">
+
+    <Cards title="Use webhooks to sync Firebase data with Clerk" description="Learn how to sync Firebase auth or Firestore data with Clerk data using webhooks." link="/docs/integrations/webhooks/sync-data" cta="Learn More" />
+
+    <Cards title="Create custom sign-up and sign-in pages" description="Learn how add custom sign-up and sign-in pages with Clerk components." link="/docs/references/nextjs/custom-signup-signin-pages" cta="Learn More" />
+
+    <Cards title="Deploy to Production" description="Learn how to deploy your Clerk app to production." link="/docs/deployments/overview" cta="Learn More" />
+
+    <Cards title="Deploy to Vercel" description="Learn how to deploy your Clerk app to production on Vercel." link="/docs/deployments/deploy-to-vercel" cta="Learn More" />
+
+  </div>
+</div>
