update pricing section

--- a/docs/authentication/saml/overview.mdx
+++ b/docs/authentication/saml/overview.mdx
@@ -59,7 +59,9 @@ Yes, Clerk supports both SP-initiated and IdP-initiated SSO flows.
 
 ### How much does it cost?
 
-It costs $50 per active connection per month for production instances. Connections in development instances will always be free, but capped to 5.
+For production instances, each active connection costs $50 per month. SAML connections require the Pro plan and the Enhanced Authentication Add-on. Please see [pricing](https://clerk.com/pricing) for those costs, and the costs of other add-ons or features.
+
+For development instances, SAML connections will always be free, but capped to 5.
 
 ### Can I get a bulk discount?
 
