apply code review suggestions

--- a/docs/authentication/saml/custom-provider.mdx
+++ b/docs/authentication/saml/custom-provider.mdx
@@ -41,17 +41,17 @@ To create a SAML connection in Clerk:
 
 ### Create a new enterprise application in your IdP
 
-Create a new application in your IdP. In the next steps, you will configure your IdP with the settings provided by your service provider (Clerk), and you will configure Clerk with the settings provided by your IdP. So, you will need to keep both the IdP and Clerk dashboards open.
+Create a new application in your IdP. In the next steps, you will configure your IdP with the settings provided by your Service Provider (Clerk), and you will configure Clerk with the settings provided by your IdP. So, you will need to keep both the IdP and Clerk dashboards open.
 
-### Configure your service provider
+### Configure your Service Provider
 
-To configure your service provider (Clerk), your IdP will either ask for the **Assertion Consumer Service (ACS) URL** and **Entity ID** or it will ask for the **Metadata URL**. If your IdP gives you the option to choose between the two, it is recommended to choose the **Metadata URL** as it is the quickest and most reliable way to configure your service provider.
+To configure your Service Provider (Clerk), your IdP will either ask for the **Assertion Consumer Service (ACS) URL** and **Entity ID** or it will ask for the **Metadata URL**. If your IdP gives you the option to choose between the two, it is recommended to choose the **Metadata URL** as it is the quickest and most reliable way to configure your Service Provider.
 
 Here are what these settings mean:
 
-- **Assertion Consumer Service (ACS) URL** - This is a unique identifier for your SAML connection that your IdP application needs.
-- **Entity ID** - This is your application's URL that your IdP will redirect your users back to after they have authenticated in your IdP.
-- **Metadata URL** - This is the URL to your SAML connection's metadata file. This is the recommended way to configure your service provider.
+- **Assertion Consumer Service (ACS) URL** - This is your application's URL that your IdP will redirect your users back to after they have authenticated in your IdP.
+- **Entity ID** - This is a unique identifier for your SAML connection that your IdP application needs.
+- **Metadata URL** - This is the URL to your SAML connection's metadata file. This is the recommended way to configure your Service Provider.
 
 To find the values for these settings:
 
@@ -59,11 +59,11 @@ To find the values for these settings:
 2. Copy the values you need for your IdP.
 3. In your IdP dashboard, paste the values in the appropriate fields.
 
-### Configure your identity provider
+### Configure your Identity Provider
 
 To configure your IdP in Clerk, scroll down to the **Identity Provider configuration** section. There are two options for configuring your IdP:
 
-- [**Metadata configuration**](#metadata-configuration) - This is where you can input the URL to your IdP's metadata file. This is the recommended way to configure your IdP, but not all IdPs support this method.
+- [**Metadata configuration**](#metadata-configuration) - This is where you can download your IdP's metadata file or input the metadata URL that you got from your IdP. This is the recommended way to configure your IdP, but not all IdPs support this method.
 - [**Custom configuration**](#custom-configuration) - This is where you can manually input the configuration settings for your IdP.
 
 #### Metadata configuration
@@ -77,8 +77,8 @@ To configure your IdP in Clerk, scroll down to the **Identity Provider configura
 
 If you choose to manually input the configuration settings for your IdP, you will need to fill these three fields in the Clerk Dashboard:
 
-- **SSO URL** - This is the unique identifier of your IdP application.
-- **Entity ID** - This is your IdP's URL that Clerk will redirect your users to so that they authenticate.
+- **SSO URL** - This is your IdP's URL that Clerk will redirect your users to so that they authenticate.
+- **Entity ID** - This is the unique identifier of your IdP application.
 - **Certificate** - This is the certificate needed for Clerk to securely connect to your IdP.
 
 1. In your IdP dashboard, find these values and copy them.
