--- a/docs/authentication/saml/overview.mdx
+++ b/docs/authentication/saml/overview.mdx
@@ -51,19 +51,17 @@ This will work: Once the user comes back from the IdP, they will need to go thro
 
 ### What happens if I delete the SAML connection? Will my users be deleted?
 
-The users will not be deleted, so your application will not break. However, they will need to “reintroduce” themselves to your new strategies by resetting their passwords or via OTP (depending on the strategy you choose).
+The users will not be deleted, so your application will not break. However, they will need to use another [strategy](/docs/authentication/configuration/sign-up-sign-in-options#authentication-strategies) such as password, email OTP, etc., to authenticate themselves moving forward.
 
 ### Does Clerk support IdP-initiated SSO?
 
-No, Clerk only supports SP-initiated flows at this time.
+Yes, Clerk supports both SP-initiated and IdP-initiated SSO flows.
 
-### How much does it cost now?
+### How much does it cost?
 
-It's going to be free during the Beta period for production instances. Connections in development instances will always be free, but capped to 5.
+For production instances, each active connection costs $50 per month. SAML connections require the Pro plan and the Enhanced Authentication Add-on. Please see [pricing](https://clerk.com/pricing) for those costs, and the costs of other add-ons or features.
 
-### How much will it cost after Beta?
-
-It will cost $50 per active connection per month for production instances. Connections in development instances will always be free, but capped to 5.
+For development instances, SAML connections will always be free, but capped to 5.
 
 ### Can I get a bulk discount?
 
