--- a/docs/references/nextjs/current-user.mdx
+++ b/docs/references/nextjs/current-user.mdx
@@ -9,7 +9,7 @@ The `currentUser` helper returns the [`Backend API User`](https://clerk.com/docs
 
 Under the hood, this helper:
 - calls `fetch()`, so it is automatically deduped per request.
-- uses the `GET /v1/users/me` endpoint, so it is subject to the 100 requests per 10 seconds rate limit.
+- uses the `GET /v1/users/me` endpoint, so it is subject to [rate limits](/docs/backend-requests/resources/rate-limits).
 
 ```tsx filename="app/page.tsx"
 import { currentUser } from '@clerk/nextjs';
